Update Prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -12,7 +12,7 @@
 	"printWidth": 600,
 	"proseWrap": "never",
 	"quoteProps": "consistent",
-	"singleAttributePerLine": true,
+	"singleAttributePerLine": false,
 	"vueIndentScriptAndStyle": true,
 	"experimentalTernaries": true,
 	"plugins": ["@ianvs/prettier-plugin-sort-imports", "@shufo/prettier-plugin-blade"],
@@ -24,8 +24,8 @@
 				"parser": "blade",
 				"printWidth": 600,
 				"tabWidth": 2,
-				"wrapAttributes": "aligned-multiple",
-				"wrapAttributesMinAttrs": 2,
+				"wrapAttributes": "force-expand-multiline",
+				"wrapAttributesMinAttrs": 99,
 				"sortTailwindcssClasses": true,
 				"sortHtmlAttributes": "code-guide",
 				"indentInnerHtml": true,
